FIX/navbar position z-index

--- a/_sass/_contact.scss
+++ b/_sass/_contact.scss
@@ -2,10 +2,10 @@
   background: $green;
   position: relative;
   .contact-header-container {
-      background: $green;
-      position: absolute;
-      width: 100%;
-      top: -25vw;
+    background: $green;
+    position: absolute;
+    width: 100%;
+    top: -25vw;
     .contact-header {
       padding: 5% 10%;
       z-index: -1;
@@ -31,11 +31,11 @@
         left: 20vw;
         width: 20vw;
       }
-  }
+    }
   }
   .contact-info-container {
     position: relative;
-    z-index: 100;
+    z-index: 2;
     width: 100%;
     background: $light-cream;
     border-radius: 17vw 17vw 0 0;
@@ -45,7 +45,7 @@
       font-weight: 300;
       font-size: 3vw;
       color: $light-brown;
-      }
+    }
     .email-box {
       position: relative;
       h3 {
@@ -170,9 +170,9 @@
       .email-box {
         width: 99%;
         .underline-email {
-        top: 10vw;
-        right: 13vw;
-        width: 13vw;
+          top: 10vw;
+          right: 13vw;
+          width: 13vw;
         }
         .email {
           border-radius: 5px;
